support metadata settings per library

--- a/Emby.Server.Implementations/Localization/Core/cs.json
+++ b/Emby.Server.Implementations/Localization/Core/cs.json
@@ -24,7 +24,7 @@
     "Channels": "Kan\u00e1ly",
     "Movies": "Filmy",
     "Albums": "Alba",
-    "NameSeasonUnknown": "Season Unknown",
+    "NameSeasonUnknown": "Nezn\u00e1m\u00e1 sez\u00f3na",
     "Artists": "Um\u011blci",
     "Folders": "Slo\u017eky",
     "Songs": "Skladby",
